@@ -1,4 +1,4 @@
-/*	$OpenBSD: authfd.h,v 1.25 2002/06/05 19:57:12 markus Exp $	*/
+/*	$OpenBSD: authfd.h,v 1.26 2002/06/05 21:55:44 markus Exp $	*/
 
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
@@ -46,6 +46,10 @@
 #define SSH_AGENTC_LOCK				22
 #define SSH_AGENTC_UNLOCK		        23
 
+/* set key lifetime */
+#define	SSH_AGENTC_LIFETIME_IDENTITY1		24
+#define	SSH_AGENTC_LIFETIME_IDENTITY		25
+
 /* extended failure messages */
 #define SSH2_AGENT_FAILURE			30
 
@@ -69,6 +73,7 @@ int	 ssh_get_num_identities(AuthenticationConnection *, int);
 Key	*ssh_get_first_identity(AuthenticationConnection *, char **, int);
 Key	*ssh_get_next_identity(AuthenticationConnection *, char **, int);
 int	 ssh_add_identity(AuthenticationConnection *, Key *, const char *);
+int	 ssh_lifetime_identity(AuthenticationConnection *, Key *, u_int);
 int	 ssh_remove_identity(AuthenticationConnection *, Key *);
 int	 ssh_remove_all_identities(AuthenticationConnection *, int);
 int	 ssh_lock_agent(AuthenticationConnection *, int, const char *);
