@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ssh-add.1,v 1.32 2002/06/05 19:57:12 markus Exp $
+.\"	$OpenBSD: ssh-add.1,v 1.33 2002/06/05 21:55:44 markus Exp $
 .\"
 .\"  -*- nroff -*-
 .\"
@@ -46,6 +46,7 @@
 .Sh SYNOPSIS
 .Nm ssh-add
 .Op Fl lLdDxX
+.Op Fl t Ar life
 .Op Ar
 .Nm ssh-add
 .Fl s Ar reader
@@ -87,6 +88,9 @@ Deletes all identities from the agent.
 Lock the agent with a password.
 .It Fl X
 Unlock the agent.
+.It Fl t Ar life
+Set a maximum lifetime when adding identities to an agent.
+The lifetime is specified in seconds.
 .It Fl s Ar reader
 Add key in smartcard
 .Ar reader .
